Revision history for {{$dist->name}}

{{$NEXT}}
          Prereqs now actually understands -relationship as documented
          in 4.300004 (Thanks, Christopher J. Madsen!)

4.300004  2011-12-12 23:34:30 America/New_York
          a new FileFinder plugin has been added, FileFinder::Filter
          (Thanks, Christopher J. Madsen!)

          AutoPrereqs can now be told to determine configure_requires
          (Thanks, Christopher J. Madsen!)

          the (lack of) order of check of authordeps is now a bit more
          predictible:
          - plugins declared with "; authordep" lines are loaded before others
          - inc:: plugins are checked first and in ASCII order
          (Thanks, Olivier Mengué!)

          Many slow-to-load modules are now loaded opportunistically to improve
          startup time.  (Thanks Olivier Mengué and rjbs)

          ShareDir documentation has been improved (thanks, Karen
          Etheridge)

          Prereqs documentation has been improved

4.300003  2011-10-31 23:58:19 America/New_York
          If no credentials are found on disk, UploadToCPAN will now prompt for
          credentials during the BeforeRelease phase, not during release
          (Thanks, Christopher J. Madsen!)

          AutoPrereqs can now be told what scanners or extra_scanners args to
          pass to Perl::PrereqScanner (Thanks, Christopher J. Madsen!)

          Prune perl prereqs out of BUILD_REQUIRES for EU::MM, and pick the
          highest required perl of either runtime or built requires.  (Thanks,
          Christopher J. Madsen!)

          Test routines should now properly report the calling line for
          failures ($Test::Builder::Level is being set) (Thanks, Christopher J.
          Madsen!)

          the is_filelist test assertion now works with objects that do the
          Dist::Zilla::Role::File role (Thanks, Christopher J. Madsen!)

          a new FileFinder plugin has been added, FileFinder::ByName