@@ -2,7 +2,9 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           Prereqs now actually understands -relationship as documented
-          in 4.300004 (Thanks, Christopher J. Madsen!)
+          in 4.300004.  Also, it throws an error if you give it a
+          plugin name that does not specify a relationship (Thanks,
+          Christopher J. Madsen!)
 
 4.300004  2011-12-12 23:34:30 America/New_York
           a new FileFinder plugin has been added, FileFinder::Filter
